# runtime-benchmarks

./: .gitignore  .gitmodules  LICENSE  README.md  README_template.md  RESULTS.csv  RESULTS.md  build_and_bench_all.py  clean_all.sh  generate_results_md.py  get_nproc.sh  json_to_md.py  merge_results.py  results.html.tmpl
.github/workflows/: codspeed.yml
c/: compiler-version.sh
c/neco/: CMakeLists.txt  CMakePresets.json  bench_util.h  build_all.sh  channel.c  io_socket_st.c
cpp/: compiler-version.sh
cpp/1CMake/: CPM.cmake
cpp/2common/: README.md  matmul.hpp  memusage.hpp  uts.hpp
cpp/HPX/: CMakeLists.txt  CMakePresets.json  bench_library_compile.sh  fib.cpp  matmul.cpp  nqueens.cpp  skynet.cpp
cpp/PhotonLibOS/: CMakeLists.txt  README.md  channel.cpp  fib.cpp  io_socket_st.cpp  matmul.cpp  nqueens.cpp  photon_bench.hpp  skynet.cpp
cpp/PhotonLibOS/cmake/: Finduring.cmake
cpp/TooManyCooks/: CMakeLists.txt  CMakePresets.json  bench_library_compile.sh  build_all.sh  channel.cpp  fib.cpp  io_socket_st.cpp  library_compile.cpp  matmul.cpp  nqueens.cpp  sieve.cpp  sieve_fun.hpp  skynet.cpp  sweep_n.sh  sweep_n_lowend.sh  threads_sweep.cpp  uts.cpp  uts_opt1.cpp  uts_opt2.cpp  uts_opt3.cpp  uts_optimizations.md
cpp/TooManyCooks/fib/: main.cpp
cpp/asio/: CMakeLists.txt  channel.cpp  io_socket_st.cpp
cpp/citor/: CMakeLists.txt  coherence_probe.md  fib.cpp  matmul.cpp  nqueens.cpp  skynet.cpp  uts.cpp  uts_opt1.cpp  uts_opt2.cpp  uts_optimizations.md
cpp/cobalt/: CMakeLists.txt  channel.cpp  io_socket_st.cpp
cpp/codspeed/: CMakeLists.txt  bench_fib.cpp  bench_matmul.cpp  bench_nqueens.cpp  bench_skynet.cpp
cpp/concurrencpp/: CMakeLists.txt  bench_library_compile.sh  build_all.sh  fib.cpp  matmul.cpp  nqueens.cpp  sieve.cpp  sieve_fun.hpp  skynet.cpp
cpp/coros/: CMakeLists.txt  CMakePresets.json  build_all.sh  fib.cpp  matmul.cpp  nqueens.cpp  skynet.cpp
cpp/corosio/: CMakeLists.txt  fib.cpp  io_socket_st.cpp  matmul.cpp  nqueens.cpp  pool_runner.hpp  skynet.cpp
cpp/cppcoro/: CMakeLists.txt  bench_library_compile.sh  fib.cpp  io_socket_st.cpp  matmul.cpp  nqueens.cpp  skynet.cpp
cpp/folly/: CMakeLists.txt  channel.cpp  fib.cpp  io_socket_st.cpp  matmul.cpp  nqueens.cpp  skynet.cpp  uts.cpp
cpp/libcoro/: CMakeLists.txt  CMakePresets.json  bench_library_compile.sh  build_all.sh  channel.cpp  fib.cpp  io_socket_st.cpp  matmul.cpp  nqueens.cpp  skynet.cpp
cpp/libfork/: CMakeLists.txt  build_all.sh  fib.cpp  matmul.cpp  nqueens.cpp  skynet.cpp  uts.cpp  uts_opt1.cpp  uts_opt2.cpp  uts_optimizations.md
cpp/phantom/: CMakeLists.txt  build_all.sh  fib.cpp  matmul.cpp
cpp/taskflow/: CMakeLists.txt  CMakePresets.json  fib.cpp  matmul.cpp  nqueens.cpp  skynet.cpp
cpp/tbb/: CMakeLists.txt  build_all.sh  fib.cpp  matmul.cpp  nqueens.cpp  sieve.cpp  skynet.cpp
cpp/userver/: CMakeLists.txt  README.md  channel.cpp  fib.cpp  io_socket_st.cpp  matmul.cpp  nqueens.cpp  skynet.cpp  userver_bench.hpp
cpp/userver/patches/: 0001-venv-virtualenv-fallback.patch
cs/: compiler-version.sh
cs/std/: .gitignore  Directory.Build.props  build_all.sh
cs/std/BenchUtil/: BenchUtil.cs
cs/std/channel/: Program.cs  channel.csproj
cs/std/fib/: Program.cs  fib.csproj
cs/std/io_socket_st/: Program.cs  io_socket_st.csproj
cs/std/matmul/: Program.cs  matmul.csproj
cs/std/nqueens/: Program.cs  nqueens.csproj
cs/std/skynet/: Program.cs  skynet.csproj
go/: compiler-version.sh
go/std/: build_all.sh
go/std/cmd/channel/: main.go
go/std/cmd/fib/: main.go
go/std/cmd/io_socket_st/: main.go
go/std/cmd/matmul/: main.go
go/std/cmd/nqueens/: main.go
go/std/cmd/skynet/: main.go
go/std/internal/benchutil/: benchutil.go
java/: compiler-version.sh
java/forkjoin/: build_all.sh
java/forkjoin/src/bench/: Bench.java  Fib.java  Matmul.java  Nqueens.java  Skynet.java
java/std/: build_all.sh
java/std/src/bench/: Bench.java  Channel.java  Fib.java  IoSocketSt.java  Matmul.java  Nqueens.java  Skynet.java
kotlin/: compiler-version.sh
kotlin/default/: benchutil.kt  build_all.sh  io_socket_st.kt  nqueens.kt
kotlin/fjp/: benchutil.kt  build_all.sh  channel.kt  fib.kt  matmul.kt  skynet.kt
nim/: compiler-version.sh
nim/weave/: .gitignore  benchutil.nim  build_all.sh  channel.nim  fib.nim  io_socket_st.nim  matmul.nim  nqueens.nim  skynet.nim  weavebench.nimble
rust/: compiler-version.sh
rust/beekeeper/: Cargo.toml  build_all.sh
rust/beekeeper/src/: lib.rs
rust/bevy_tasks/: Cargo.toml  build_all.sh
rust/bevy_tasks/src/: lib.rs
rust/chili/: Cargo.toml  build_all.sh
rust/chili/src/: lib.rs
rust/forte/: Cargo.toml  build_all.sh
rust/forte/src/: lib.rs
rust/glommio/: Cargo.toml  build_all.sh
rust/glommio/src/: lib.rs
rust/micropool/: Cargo.toml  build_all.sh
rust/micropool/src/: lib.rs
rust/monoio/: Cargo.toml  build_all.sh
rust/monoio/.cargo/: config.toml
rust/monoio/src/: lib.rs
rust/rayon/: Cargo.toml  build_all.sh
rust/rayon/src/: lib.rs
rust/smol/: Cargo.toml  build_all.sh
rust/smol/src/: lib.rs
rust/tokio/: Cargo.toml  build_all.sh
rust/tokio/src/: lib.rs
zig/: compiler-version.sh
zig/spice/: build.zig  build_all.sh  fix-stale-job-tail.patch
zig/spice/src/: fib.zig  matmul.zig  nqueens.zig  skynet.zig
zig/zap/: .gitignore  build.zig  build_all.sh
zig/zap/src/: benchutil.zig  fib.zig  matmul.zig  nqueens.zig  skynet.zig  thread_pool.zig
zig/zigbeam/: .gitignore  build.zig  build_all.sh  zig-0.16-compat.patch
zig/zigbeam/src/: benchutil.zig  channel.zig  fib.zig  matmul.zig  nqueens.zig  skynet.zig
